Added Base Elements

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>A heading 1</h1>
-        <h2>A heading 2</h2>
-        <p>A paragraph</p>
-        <p>This is the new paragraph</p>
+        <h1>This is my first <i>&nbsp;&nbsp;"Paragraph"</i></h1>
+        <blockquote>This is text inside of a block quote.</blockquote> <!indents the text, default status>
+        <br> <!full break, leave a space on page>
+        <p> There would be text <b>HERE</b> on or about some subject. This text would be relevent to some <strong>OTHER</strong> material on this page, probably relating to the title. There might also be a story within this paragraph, more <mark>rich details </mark>to flush out the <i><b>Title</b></i>.</p>
+        <hr><hr> <!block lines across the whole screen>
+        <h3><sub>BOOM!!</sub> <sup>Aarrrrtillery</sup></h3>
+        <br>
+        
+        <ol>
+            <li>First Item Number</li>
+            <li>Second Item Number</li>
+            <li>Guess which number item?</li>
+        </ol>
+        <ul>
+            <li>these have bullet points</li>
+            <li>these are unordered</li>
+        </ul>
+        
+        <p>Artillery is the king of battle!</p>
     </body>
 </html>
 
