--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         
         <ol>
             <li>First Item Number</li>
-            <li>Second Item Number</li>
+            <li><i><strong>Second Item Number</strong></i></li>
             <li>Guess which number item?</li>
         </ol>
         <ul>
-            <li>these have bullet points</li>
+            <li>&copy;these have bullet points</li>
             <li>these are unordered</li>
+            <li>Fifth Item &gt; Fourth Item</li>
+            <li>Fifth Item &lt; Sixth Item</li>
+            <li>Fifth &amp; Sixth</li>
         </ul>
         
         <p>Artillery is the king of battle!</p>
